Fix ResponseButtons not covering the full FooterBar height.

--- a/src/components/FooterBar/Responses/Bar.css
+++ b/src/components/FooterBar/Responses/Bar.css
@@ -8,6 +8,10 @@
   align-items: center;
 }
 
+.ResponseButton-wrap {
+  height: 100%;
+}
+
 .ResponseButton {
   height: 100%;
   border: 0;
